swa/yaml/simple-webapp-ingress.yml
# config for nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:    
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-webapp
            port:
              number: 80
